--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,700;1,700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>Timer Ignite</title>
   </head>
   <body>
     <div id="root"></div>
